fix: fix application height on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,19 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+html,
+body,
+#__next {
+  display: flex;
+  flex-direction: column;
+}
+
+html {
+  height: 100%;
+}
+
+body,
+#__next {
+  flex: 1;
+}
